[package]
name = "raycasting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#fastrand = "1.9"
#sdl2 = { version = "0.35", features = ["unsafe_textures"] }
sdl2 = "0.35"

[profile.dev]
opt-level = 1
